@@ -4,8 +4,9 @@ ruby '2.1.2', :engine => 'ruby', :engine_version => '2.1.2', :patchlevel => '95'
 #ruby=ruby-2.1.2
 #ruby-gemset=puppet-mobileconfig_profile
 
-gem 'puppet'
 gem 'facter'
+gem 'hiera'
+gem 'puppet'
 
 # Bundle edge puppet instead:
 # gem 'puppet', :git => 'git://github.com/puppetlabs/puppet.git'
