@@ -1,3 +1,6 @@
+2014-09-15 (0.1.3)  Chris Edester
+        * compatability with puppet 3.7 and future parser
+
 2014-06-02 (0.1.2)  Chris Edester
         * we are using validations from stdlib, so require it in Modulefile
 
